inclusão dos querys parameters
